--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,18 +1,2 @@
-<form action="/tasks/add" method="POST">
-  <div>
-    <label for="title">Write the title:</label>
-    <input type="text" name="title" placeholder="Title" id="title" />
-  </div>
-  <div>
-    <label for="description">Write the description:</label>
-    <textarea
-      name="description"
-      placeholder="Description"
-      id="description"
-    ></textarea>
-  </div>
-
-  <div>
-    <button id="addTask">Add Task</button>
-  </div>
-</form>
+{{> tasks/taskForm}}
+{{> tasks/taskTable}}
