--- a/src/views/partials/tasks/taskTable.hbs
+++ b/src/views/partials/tasks/taskTable.hbs
@@ -17,8 +17,8 @@
         <td>Done: {{this.done}}</td>
         <td>
           <button>Done</button>
-          <button>Edit</button>
-          <button>Delete</button>
+          <a href="/edit/{{_id}}">Edit</a>
+          <a href="/delete/{{_id}}">Delete</a>
         </td>
       </tr>
     {{/each}}
