--- a/src/views/partials/tasks/taskForm.hbs
+++ b/src/views/partials/tasks/taskForm.hbs
@@ -7,6 +7,8 @@
     <label for="description">Write the description:</label>
     <textarea
       name="description"
+      rows="5"
+      cols="50"
       placeholder="Description"
       id="description"
     ></textarea>
