Add: Done button working

--- a/src/views/partials/tasks/taskTable.hbs
+++ b/src/views/partials/tasks/taskTable.hbs
@@ -16,7 +16,7 @@
         <td>{{this.description}}</td>
         <td>Done: {{this.done}}</td>
         <td>
-          <button>Done</button>
+          <a href="/done/{{_id}}">Done</a>
           <a href="/edit/{{_id}}">Edit</a>
           <a href="/delete/{{_id}}">Delete</a>
         </td>
