--- a/src/views/edit.hbs
+++ b/src/views/edit.hbs
@@ -1,4 +1,4 @@
-<form action="/edit/{{task._id}}" method="POST">
+<form action="/task/edit/{{task._id}}" method="POST">
   <div>
     <label for="title">Write the title:</label>
     <input
