--- a/src/views/partials/tasks/taskForm.hbs
+++ b/src/views/partials/tasks/taskForm.hbs
@@ -1,4 +1,4 @@
-<form action="/tasks/add" method="POST">
+<form action="/task/add" method="POST">
   <div>
     <label for="title">Write the title:</label>
     <input type="text" name="title" placeholder="Title" id="title" />
