--- a/src/views/partials/tasks/taskTable.hbs
+++ b/src/views/partials/tasks/taskTable.hbs
@@ -14,15 +14,14 @@
         <td>{{@index}}</td>
         <td>{{this.title}}</td>
         <td>{{this.description}}</td>
-        <td>Done: {{this.done}}</td>
         <td>
           {{#if done}}
-            <a href="/done/{{_id}}">Undone</a>
+            <a href="/task/done/{{_id}}">Undone</a>
           {{else}}
-            <a href="/done/{{_id}}">Done</a>
+            <a href="/task/done/{{_id}}">Done</a>
           {{/if}}
-          <a href="/edit/{{_id}}">Edit</a>
-          <a href="/delete/{{_id}}">Delete</a>
+          <a href="/task/edit/{{_id}}">Edit</a>
+          <a href="/task/delete/{{_id}}">Delete</a>
         </td>
       </tr>
     {{/each}}
