--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -4,10 +4,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Express mongodb crud</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   </head>
   <body>
-    <h1>The express mongodb crud</h1>
-    
     {{> navdir }} <!-- navdir is a partial, so it's importing it -->
 
     {{{ body }}} <!-- getting the body from the layout -->
