--- a/src/views/partials/navdir.hbs
+++ b/src/views/partials/navdir.hbs
@@ -1,3 +1,7 @@
-<ul>
-  <li><a href="/">Home</a></li>
-</ul>
+<nav class="navbar navbar-dark bg-dark mb-4">
+  <div class="container">
+    <a href="/" class="navbar-brand">Home</a>
+    <a href="/about" class="navbar-brand">About</a>
+    <a href="https://github.com/ikipm" class="navbar-brand">Github</a>
+  </div>
+</nav>
