Add: Bootstrap to task table and edit view

--- a/src/views/partials/tasks/taskForm.hbs
+++ b/src/views/partials/tasks/taskForm.hbs
@@ -12,7 +12,7 @@
       />
     </div>
     <div>
-      <label for="description">Write the description:</label>
+      <label for="description" class="mt-2">Write the description:</label>
       <textarea
         name="description"
         rows="5"
