--- a/src/views/edit.hbs
+++ b/src/views/edit.hbs
@@ -1,26 +1,37 @@
-<form action="/task/edit/{{task._id}}" method="POST">
-  <div>
-    <label for="title">Write the title:</label>
-    <input
-      type="text"
-      name="title"
-      placeholder="Title"
-      id="title"
-      value="{{task.title}}"
-    />
-  </div>
-  <div>
-    <label for="description">Write the description:</label>
-    <textarea
-      name="description"
-      rows="5"
-      cols="50"
-      placeholder="Description"
-      id="description"
-    >{{task.description}}</textarea>
-  </div>
+<div class="container">
+  <div class="row d-flex justify-content-center">
+    <div class="col-md-7">
+      <div class="card card-body p-4 bg-dark text-white">
+        <h3 class="card-title">Edit a task</h3>
+        <form action="/task/edit/{{task._id}}" method="POST">
+          <div>
+            <label for="title">Write the title:</label>
+            <input
+              type="text"
+              name="title"
+              placeholder="Title"
+              id="title"
+              value="{{task.title}}"
+              class="form-control bg-dark text-white"
+            />
+          </div>
+          <div>
+            <label for="description" class="mt-2">Write the description:</label>
+            <textarea
+              name="description"
+              rows="5"
+              cols="50"
+              placeholder="Description"
+              id="description"
+              class="form-control bg-dark text-white"
+            >{{task.description}}</textarea>
+          </div>
 
-  <div>
-    <button id="addTask">Update Task</button>
+          <div>
+            <button id="addTask" class="btn btn-primary mt-2">Update Task</button>
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
-</form>
+</div>
