Add: Static files. Added icon to the app and css

--- a/src/views/partials/tasks/taskTable.hbs
+++ b/src/views/partials/tasks/taskTable.hbs
@@ -38,7 +38,10 @@
     </tbody>
   </table>
 {{else}}
-  <div class="text-center text-white">
-    <h2>No tasks added</h2>
+  <div class="h-100 d-flex align-items-center justify-content-center">
+    <div class="text-center text-white">
+      <h2>There aren't tasks</h2>
+      <img src="/icons/empty-folder.svg" alt="Empty folder" class="w-75" />
+    </div>
   </div>
 {{/if}}
