--- a/src/views/partials/navdir.hbs
+++ b/src/views/partials/navdir.hbs
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-dark bg-dark mb-4">
   <div class="container">
+    <img src="/img/ikipm.png">
     <a href="/" class="navbar-brand">Home</a>
     <a href="/about" class="navbar-brand">About</a>
     <a href="https://github.com/ikipm" class="navbar-brand">Github</a>
