--- a/src/views/partials/tasks/taskForm.hbs
+++ b/src/views/partials/tasks/taskForm.hbs
@@ -9,6 +9,7 @@
         placeholder="Title"
         id="title"
         class="form-control bg-dark text-white"
+        required
       />
     </div>
     <div>
@@ -20,6 +21,7 @@
         placeholder="Description"
         id="description"
         class="form-control bg-dark text-white"
+        required
       ></textarea>
     </div>
 
