--- a/src/views/edit.hbs
+++ b/src/views/edit.hbs
@@ -13,6 +13,7 @@
               id="title"
               value="{{task.title}}"
               class="form-control bg-dark text-white"
+              required
             />
           </div>
           <div>
@@ -24,6 +25,7 @@
               placeholder="Description"
               id="description"
               class="form-control bg-dark text-white"
+              required
             >{{task.description}}</textarea>
           </div>
 
