--- a/src/views/edit.hbs
+++ b/src/views/edit.hbs
@@ -1,6 +1,15 @@
 <div class="container">
   <div class="row d-flex justify-content-center">
     <div class="col-md-7">
+      {{#if showAlert}}
+        <div class="alert alert-warning d-flex align-items-center alert-dismissible" role="alert">
+          <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Warning:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+          <div>
+            Duplicated title! Try again.
+          </div>
+          <a class="btn-close" data-dismiss="alert"></a>
+        </div>
+      {{/if}}
       <div class="card card-body p-4 bg-dark text-white">
         <h3 class="card-title">Edit a task</h3>
         <form action="/task/edit/{{task._id}}" method="POST">
