--- a/src/views/nologed.hbs
+++ b/src/views/nologed.hbs
@@ -1,9 +1,27 @@
 <div class="container">
     <div class="row d-flex justify-content-center">
         <div class="col-md-5">
+            {{#if showRegisterAlert}}
+                <div class="alert alert-warning d-flex align-items-center alert-dismissible" role="alert">
+                    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Warning:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+                    <div>
+                        User or email in use.
+                    </div>
+                    <a class="btn-close" data-dismiss="alert"></a>
+                </div>
+            {{/if}}
             {{>login/registerForm}}
         </div>
         <div class="col-md-5">
+            {{#if showLoginAlert}}
+                <div class="alert alert-warning d-flex align-items-center alert-dismissible" role="alert">
+                    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Warning:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+                    <div>
+                        User or password wrong.
+                    </div>
+                    <a class="btn-close" data-dismiss="alert"></a>
+                </div>
+            {{/if}}
             {{>login/loginForm}}
         </div>
     </div>
