Add: Logout and refactoring

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="d-flex justify-content-center">
-    <h5 class="text-white mb-4">Hello {{user}}</h5>
+    <a href="logout" class="btn btn-secondary btn-lg mb-4">Hello {{user}}</a>
   </div>
   <div class="row">
     <div class="col-md-5">
