--- a/src/views/partials/tasks/taskTable.hbs
+++ b/src/views/partials/tasks/taskTable.hbs
@@ -27,6 +27,10 @@
                 class="btn btn-warning btn-sm"
               >Undone</a>
             {{/if}}
+            <a
+              href="/task/info/{{_id}}"
+              class="btn btn-secondary btn-sm"
+            >Info</a>
             <a href="/task/edit/{{_id}}" class="btn btn-primary btn-sm">Edit</a>
             <a
               href="/task/delete/{{_id}}"
