Add: Share system

--- a/src/views/edit.hbs
+++ b/src/views/edit.hbs
@@ -38,6 +38,8 @@
             >{{task.description}}</textarea>
           </div>
 
+          <a href="/share/{{task._id}}" class="mt-2 btn btn-outline-secondary">Share task</a>
+
           <div>
             <button id="addTask" class="btn btn-primary mt-2">Update Task</button>
           </div>
