Delete: Margin bottom share task

--- a/src/views/share.hbs
+++ b/src/views/share.hbs
@@ -11,7 +11,7 @@
             >-</a></p>
         {{/each}}
         <form action="/share/add/{{task._id}}" method="POST">
-          <div class="input-group mb-3">
+          <div class="input-group">
             <button id="Add User" class="btn btn-outline-secondary">Add User</button>
             <input
               type="email"
