--- a/src/views/info.hbs
+++ b/src/views/info.hbs
@@ -1,6 +1,10 @@
 <div class="container">
   <div class="row d-flex justify-content-center">
     <div class="col-md-7">
+      <div
+        style="background-color: {{task.color}}; height: 10px;"
+        class="rounded-top"
+      ></div>
       <div class="card card-body p-4 bg-dark text-white">
         <h3 class="card-title">{{task.title}}</h3>
         <p>{{task.description}}</p>
