--- a/src/views/partials/tasks/taskForm.hbs
+++ b/src/views/partials/tasks/taskForm.hbs
@@ -25,6 +25,15 @@
       ></textarea>
     </div>
 
+    <input
+      name="color"
+      type="color"
+      class="form-control form-control-color bg-dark mt-2"
+      id="colorInput"
+      value="#34ac4a"
+      title="Choose your color"
+    />
+
     <div>
       <button id="addTask" class="btn btn-primary mt-2">Add Task</button>
     </div>
