--- a/src/views/partials/tasks/taskTable.hbs
+++ b/src/views/partials/tasks/taskTable.hbs
@@ -1,7 +1,8 @@
 {{#if tasks}}
-  <table class="table table-bordered table-hover table-dark">
+  <table class="table table-dark">
     <thead>
       <tr>
+        <th></th>
         <th>N.</th>
         <th>Title</th>
         <th>Description</th>
@@ -12,6 +13,7 @@
     <tbody>
       {{#each tasks}}
         <tr>
+          <td style="background-color: {{color}};" class="rounded-start"></td>
           <td>Own task: {{@index}}</td>
           <td>{{this.title}}</td>
           <td>{{this.description}}</td>
@@ -41,6 +43,7 @@
       {{/each}}
       {{#each shareTasks}}
         <tr>
+          <td style="background-color: {{color}};"></td>
           <td>Shared task: {{@index}}</td>
           <td>{{this.title}}</td>
           <td>{{this.description}}</td>
