Add: Api and token system

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="d-flex justify-content-center">
     <a href="logout" class="btn btn-secondary btn-lg mb-4">Hello {{user}}</a>
+    <a href="/api/create-token" class="btn btn-info btn-lg mb-4 ms-3">API admin</a>
   </div>
   <div class="row">
     <div class="col-md-5">
