Fix: Range limit only to db posts

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -16,8 +17,8 @@
     </svg>
   </head>
   <body>
-    {{> navdir }} <!-- navdir is a partial, so it's importing it -->
+    {{> navdir }}
 
-    {{{ body }}} <!-- getting the body from the layout -->
+    {{{ body }}}
   </body>
 </html>
