--- a/src/views/partials/login/registerForm.hbs
+++ b/src/views/partials/login/registerForm.hbs
@@ -1,6 +1,6 @@
 <div class="card card-body p-4 bg-dark text-white text-center">
   <h2 class="card-title">Register</h2>
-  <form action="/register" method="POST">
+  <form action="/user/register" method="POST">
     <div>
       <input
         type="text"
