--- a/src/views/partials/login/loginForm.hbs
+++ b/src/views/partials/login/loginForm.hbs
@@ -1,6 +1,6 @@
 <div class="card card-body p-4 bg-dark text-white text-center">
   <h2 class="card-title">Login</h2>
-  <form action="/login" method="POST">
+  <form action="/user/login" method="POST">
     <div>
       <input
         type="text"
