--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row d-flex justify-content-center">
+  <div class="d-flex justify-content-center">
     <div class="col-md-5">
       {{#if userData}}
         <div class="card bg-dark text-white" style="width: 18rem;">
