Update: Delete unnecessary logs and changed about text

--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -28,7 +28,7 @@
           </div>
         </div>
       {{else}}
-        <p>No data</p>
+        <h3 class="text-white">Can't get info</h3>
       {{/if}}
     </div>
   </div>
